	PR fortran/52865 	* trans-stmt.c (gfc_trans_do): Put countm1-- before conditional 	and use value of countm1 before the decrement in the condition.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195241 138bc75d-0d04-0410-961f-82ee72b054a4